// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiKeyBanner Component should change content when key is copied 1`] = `
<Banner
  my="300"
  onDismiss={[MockFunction]}
  status="success"
  title="congrats on your new key"
>
  <p>
    Make sure to copy your API key now. You won't be able to see it again!
  </p>
  <strong>
    nuevo-llave
  </strong>
  <Banner.Actions>
    <Button
      onClick={[Function]}
    >
      Copied to clipboard
    </Button>
  </Banner.Actions>
</Banner>
`;

exports[`ApiKeyBanner Component should render default success message 1`] = `
<Banner
  my="300"
  onDismiss={[MockFunction]}
  status="success"
  title="congrats on your new key"
>
  <p>
    Make sure to copy your API key now. You won't be able to see it again!
  </p>
  <strong>
    nuevo-llave
  </strong>
  <Banner.Actions>
    <Button
      onClick={[Function]}
    >
      Copy
    </Button>
  </Banner.Actions>
</Banner>
`;
